a bunch of UI fixes completed for the home page, listed below: toolbar logo is now wrapped in a h1 for semantics section headers are now h2s for semantics the home button is wrapped in an anchor tag and is invisible on the home page itself saved chart icon anchors are 35x35 and text is formatted to center vertically all anchor tags have titles all clickable buttons have hover effects duplicate name is better home button is now just a hover icon

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -34,10 +34,34 @@ th, td {
     padding: 5px;
 }
 tr:nth-child(even) {
-	background: #E8E8E8
+	background: #E0E0E0
 }
 tr:nth-child(odd) {
 	background: #FFFFFF
+}
+a {
+    color: #616161;
+}
+a:hover, a:active {
+    color: #000000; 
+}
+.home-icon-light {
+	fill: #FFFFFF;
+}
+.home-icon-light:hover {
+	fill: #E0E0E0;
+}
+.duplicate-icon-dark {
+	fill: #616161;
+}
+.duplicate-icon-dark:hover {
+	fill: #000000;
+}
+.delete-icon-dark {
+	fill: #616161;
+}
+.delete-icon-dark:hover {
+	fill: #000000;
 }
 .chartrowIconAnchor {
 	display: inline-block;
@@ -46,6 +70,8 @@ tr:nth-child(odd) {
 .chartrowLinkAnchor {
 	line-height: 32px;
 	padding: 0px 11px 0px;
+	font-weight: bold;
+	text-decoration: none;
 }
 .right {
 	float: right;
